Refine long SystemId display to prevent it from overflowing the cell

--- a/api-runtime/rest-runtime/admin-web/html/disk.html
+++ b/api-runtime/rest-runtime/admin-web/html/disk.html
@@ -351,11 +351,56 @@
         font-weight: bold;
     }
 
-    .disk-name-cell .disk-system-id {
+    .disk-system-id {
         display: block;
         font-size: 12px;
         font-weight: normal;
         color: #666;
+        max-width: 200px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        cursor: pointer;
+    }
+
+    .system-id-overlay {
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 50%;
+        max-width: 600px;
+        background-color: white;
+        border: 1px solid black;
+        padding: 20px;
+        z-index: 2000;
+        border-radius: 5px;
+    }
+
+    .system-id-overlay-content {
+        position: relative;
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+        word-wrap: break-word;
+    }
+
+    .system-id-overlay .close-btn {
+        position: absolute;
+        top: -15px;
+        right: -5px;
+        background: none;
+        border: none;
+        font-size: 16px;
+        cursor: pointer;
+    }
+
+    .copy-btn {
+        background: none;
+        border: none;
+        font-size: 16px;
+        cursor: pointer;
+        margin-left: 10px;
     }
 
     .disk-name-cell .disk-created-time {
@@ -492,7 +537,8 @@
             {{range $index, $disk := .Disks}}
             <tr>
                 <td class="column-num">{{$index | inc}}</td>
-                <td class="disk-name-cell">{{$disk.IId.NameId}}<span class="disk-system-id">&nbsp;• {{$disk.IId.SystemId}}</span><span class="disk-created-time" data-time="{{$disk.CreatedTime}}"></span></td>
+                <td class="disk-name-cell">{{$disk.IId.NameId}}<span class="disk-system-id" onclick="showSystemIdOverlay('{{$disk.IId.SystemId}}')">&nbsp;• {{$disk.IId.SystemId}}</span>
+                    <span class="disk-created-time" data-time="{{$disk.CreatedTime}}"></span></td>
                 <td class="center-align zone-column">{{$disk.Zone}}</td>
                 <td class="center-align type-column">{{$disk.DiskType}}</td>
                 <td class="center-align size-upsize-column">
@@ -596,6 +642,15 @@
     
     <div id="add-tag-overlay" class="overlay">
         <div class="add-tag-overlay-content"></div>
+    </div>
+
+    <div id="system-id-overlay" class="system-id-overlay">
+        <div class="system-id-overlay-content">
+            <button class="close-btn" onclick="closeSystemIdOverlay()">x</button>
+            <h2>System ID (Managed by CSP)</h2>
+            <p id="fullSystemId"></p>
+            <button class="copy-btn" onclick="copySystemId()">📋</button>
+        </div>
     </div>
 
 </body>
@@ -1319,6 +1374,46 @@
             return `${date} ${time} ${timezone}`;
         }
     });
+
+    function showSystemIdOverlay(systemId) {
+        const overlay = document.getElementById('system-id-overlay');
+        const fullSystemIdElement = document.getElementById('fullSystemId');
+        fullSystemIdElement.textContent = systemId;
+
+        overlay.style.display = 'block';
+        document.addEventListener('keydown', handleEscSystemIdOverlay);
+    }
+
+    function closeSystemIdOverlay() {
+        const overlay = document.getElementById('system-id-overlay');
+        overlay.style.display = 'none';
+        document.removeEventListener('keydown', handleEscSystemIdOverlay);
+    }
+
+    function handleEscSystemIdOverlay(event) {
+        if (event.key === "Escape") {
+            closeSystemIdOverlay();
+        }
+    }
+
+    function copySystemId() {
+        const fullSystemIdElement = document.getElementById('fullSystemId');
+        const range = document.createRange();
+        range.selectNode(fullSystemIdElement);
+        const selection = window.getSelection();
+
+        selection.removeAllRanges();
+        selection.addRange(range);
+
+        try {
+            document.execCommand('copy');
+            closeSystemIdOverlay();
+        } catch (err) {
+            console.error('Error copying SystemId: ', err);
+        }
+
+        selection.removeAllRanges();
+    }
 
 </script>
 
