--- a/api-runtime/rest-runtime/admin-web/html/myimage.html
+++ b/api-runtime/rest-runtime/admin-web/html/myimage.html
@@ -376,20 +376,65 @@
         text-decoration: underline;
         cursor: pointer;
     }
-    .disk-name-cell {
+    .myimage-name-cell {
         text-align: left;
         font-size: 13px;
         font-weight: bold;
     }
 
-    .disk-name-cell .disk-system-id {
+    .myimage-system-id {
         display: block;
         font-size: 12px;
         font-weight: normal;
         color: #666;
+        max-width: 200px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        cursor: pointer;
     }
 
-    .disk-name-cell .myimage-created-time {
+    .system-id-overlay {
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 50%;
+        max-width: 600px;
+        background-color: white;
+        border: 1px solid black;
+        padding: 20px;
+        z-index: 2000;
+        border-radius: 5px;
+    }
+
+    .system-id-overlay-content {
+        position: relative;
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+        word-wrap: break-word;
+    }
+
+    .system-id-overlay .close-btn {
+        position: absolute;
+        top: -15px;
+        right: -5px;
+        background: none;
+        border: none;
+        font-size: 16px;
+        cursor: pointer;
+    }
+
+    .copy-btn {
+        background: none;
+        border: none;
+        font-size: 16px;
+        cursor: pointer;
+        margin-left: 10px;
+    }
+
+    .myimage-name-cell .myimage-created-time {
         display: block;
         font-size: 12px;
         font-weight: normal;
@@ -399,14 +444,6 @@
         text-align: center;
         font-size: 13px;        
     }
-
-    .source-vm-cell .source-vm-system-id {
-        display: block;
-        font-size: 12px;
-        font-weight: normal;
-        color: #666;
-    }
-
 
 </style>
 </head>
@@ -450,11 +487,11 @@
             {{range $index, $myImage := .MyImages}}
             <tr>
                 <td class="column-num">{{$index | inc}}</td>
-                <td class="disk-name-cell">{{$myImage.IId.NameId}}
-                    <span class="disk-system-id">&nbsp;• {{$myImage.IId.SystemId}}</span>
+                <td class="myimage-name-cell">{{$myImage.IId.NameId}}
+                    <span class="myimage-system-id" onclick="showSystemIdOverlay('{{$myImage.IId.SystemId}}')">&nbsp;• {{$myImage.IId.SystemId}}</span>
                     <span class="myimage-created-time" data-time="{{$myImage.CreatedTime}}"></span></td>
-                <td class="center-align source-vm-cell">{{$myImage.SourceVM.NameId}}
-                    <span class="source-vm-system-id">&nbsp;• {{$myImage.SourceVM.SystemId}}</span></td>
+                <td class="center-align myimage-name-cell">{{$myImage.SourceVM.NameId}}
+                    <span class="myimage-system-id" onclick="showSystemIdOverlay('{{$myImage.SourceVM.SystemId}}')">&nbsp;• {{$myImage.SourceVM.SystemId}}</span></td>
                 <td class="center-align">{{$myImage.Status}}</td>
                 <td>
                     {{range $tag := $myImage.TagList}}
@@ -519,6 +556,15 @@
     
     <div id="add-tag-overlay" class="overlay">
         <div class="add-tag-overlay-content"></div>
+    </div>
+
+    <div id="system-id-overlay" class="system-id-overlay">
+        <div class="system-id-overlay-content">
+            <button class="close-btn" onclick="closeSystemIdOverlay()">x</button>
+            <h2>System ID (Managed by CSP)</h2>
+            <p id="fullSystemId"></p>
+            <button class="copy-btn" onclick="copySystemId()">📋</button>
+        </div>
     </div>
 
 </body>
@@ -968,6 +1014,47 @@
             sourceVMSelect.disabled = true;
         });
     });
+
+
+    function showSystemIdOverlay(systemId) {
+        const overlay = document.getElementById('system-id-overlay');
+        const fullSystemIdElement = document.getElementById('fullSystemId');
+        fullSystemIdElement.textContent = systemId;
+
+        overlay.style.display = 'block';
+        document.addEventListener('keydown', handleEscSystemIdOverlay);
+    }
+
+    function closeSystemIdOverlay() {
+        const overlay = document.getElementById('system-id-overlay');
+        overlay.style.display = 'none';
+        document.removeEventListener('keydown', handleEscSystemIdOverlay);
+    }
+
+    function handleEscSystemIdOverlay(event) {
+        if (event.key === "Escape") {
+            closeSystemIdOverlay();
+        }
+    }
+
+    function copySystemId() {
+        const fullSystemIdElement = document.getElementById('fullSystemId');
+        const range = document.createRange();
+        range.selectNode(fullSystemIdElement);
+        const selection = window.getSelection();
+
+        selection.removeAllRanges();
+        selection.addRange(range);
+
+        try {
+            document.execCommand('copy');
+            closeSystemIdOverlay();
+        } catch (err) {
+            console.error('Error copying SystemId: ', err);
+        }
+
+        selection.removeAllRanges();
+    }
 
 </script>
 </html>
