--- a/api-runtime/rest-runtime/admin-web/html/security-group.html
+++ b/api-runtime/rest-runtime/admin-web/html/security-group.html
@@ -88,8 +88,8 @@
     }
     .tag-overlay .close-btn {
         position: absolute;
-        top: 5px;
-        right: 10px;
+        top: -10px;
+        right: -5px;
         background: none;
         border: none;
         font-size: 16px;
@@ -515,6 +515,58 @@
         color: #666;
     }
 
+    .desc-system-id {
+        display: block;
+        font-size: 12px;
+        font-weight: normal;
+        color: #666;
+        max-width: 200px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        cursor: pointer;
+    }
+
+    .system-id-overlay {
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 50%;
+        max-width: 600px;
+        background-color: white;
+        border: 1px solid black;
+        padding: 20px;
+        z-index: 2000;
+        border-radius: 5px;
+    }
+
+    .system-id-overlay-content {
+        position: relative;
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+        word-wrap: break-word;
+    }
+
+    .system-id-overlay .close-btn {
+        position: absolute;
+        top: -15px;
+        right: -5px;
+        background: none;
+        border: none;
+        font-size: 16px;
+        cursor: pointer;
+    }
+
+    .copy-btn {
+        background: none;
+        border: none;
+        font-size: 16px;
+        cursor: pointer;
+        margin-left: 10px;
+    }
+
 </style>
 </head>
 <body>
@@ -557,10 +609,14 @@
             <tr>
                 <td class="column-num">{{$index | inc}}</td>
                 <td class="sg-name desc-name-cell center-align">{{$sg.IId.NameId}}
-                    <span class="desc-system-id">&nbsp;• {{$sg.IId.SystemId}}</span>
+                    <span class="desc-system-id" onclick="showSystemIdOverlay('{{$sg.IId.SystemId}}')">
+                        &nbsp;• {{$sg.IId.SystemId}}
+                    </span>
                 </td>
-                <td class="vpc-name desc-name-cell center-align">{{$sg.VpcIID.NameId}}
-                    <span class="desc-system-id">&nbsp;• {{$sg.VpcIID.SystemId}}</span>
+                <td class="vpc-name desc-name-cell center-align">
+                    {{$sg.VpcIID.NameId}}
+                    <span class="desc-system-id" onclick="showSystemIdOverlay('{{$sg.VpcIID.SystemId}}')">&nbsp;• {{$sg.VpcIID.SystemId}}
+                    </span>
                 </td>
                 <td class="rules-info">
                     <table class="inner-table">
@@ -740,6 +796,17 @@
     </div>
 
     <input type="hidden" id="connConfig" value="{{.ConnectionConfig}}">
+
+
+    <div id="system-id-overlay" class="system-id-overlay">
+        <div class="system-id-overlay-content">
+            <button class="close-btn" onclick="closeSystemIdOverlay()">x</button>
+            <h2>System ID (Managed by CSP)</h2>
+            <p id="fullSystemId"></p>
+            <button class="copy-btn" onclick="copySystemId()">📋</button>
+        </div>
+    </div>
+
 </body>
 <script>
     let currentProvider = '';
@@ -1654,6 +1721,47 @@
             }
         });
     });
+
+
+    function showSystemIdOverlay(systemId) {
+        const overlay = document.getElementById('system-id-overlay');
+        const fullSystemIdElement = document.getElementById('fullSystemId');
+        fullSystemIdElement.textContent = systemId;
+
+        overlay.style.display = 'block';
+        document.addEventListener('keydown', handleEscSystemIdOverlay);
+    }
+
+    function closeSystemIdOverlay() {
+        const overlay = document.getElementById('system-id-overlay');
+        overlay.style.display = 'none';
+        document.removeEventListener('keydown', handleEscSystemIdOverlay);
+    }
+
+    function handleEscSystemIdOverlay(event) {
+        if (event.key === "Escape") {
+            closeSystemIdOverlay();
+        }
+    }
+
+    function copySystemId() {
+        const fullSystemIdElement = document.getElementById('fullSystemId');
+        const range = document.createRange();
+        range.selectNode(fullSystemIdElement);
+        const selection = window.getSelection();
+
+        selection.removeAllRanges();
+        selection.addRange(range);
+
+        try {
+            document.execCommand('copy');
+            closeSystemIdOverlay();
+        } catch (err) {
+            console.error('Error copying SystemId: ', err);
+        }
+
+        selection.removeAllRanges();
+    }
 
 </script>
 </html>
