Change the default kubernetes Version for Tencent

--- a/api-runtime/rest-runtime/admin-web/html/cluster.html
+++ b/api-runtime/rest-runtime/admin-web/html/cluster.html
@@ -1325,6 +1325,7 @@
                         rootDiskTypeInput.value = 'cloud_ssd';
                         break;
                     case 'TENCENT':
+                        versionInput.value = '1.28.3';
                         vmSpecInput.value = 'S5.MEDIUM4';
                         break;
                     case 'GCP':
