--- a/api-runtime/rest-runtime/admin-web/html/region-zone.html
+++ b/api-runtime/rest-runtime/admin-web/html/region-zone.html
@@ -33,13 +33,16 @@
         width: 5%;
     }
     .column-region-name {
-        width: 25%;
+        width: 15%;
     }
     .column-display-name {
-        width: 25%;
+        width: 18%;
+    }
+    .column-csp-display-name {
+        width: 18%;
     }
     .column-zone-list {
-        width: 45%;
+        width: 50%;
     }
 
     #searchInputWrapper {
@@ -112,17 +115,22 @@
     }
 
     function searchTable() {
-        var input, filter, table, tr, td;
+        var input, filter, table, tr, td, td2;
         input = document.getElementById("searchInput");
         filter = input.value.toUpperCase();
         table = document.getElementsByTagName("table")[0];
         tr = table.getElementsByTagName("tr");
 
         for (var i = 1; i < tr.length; i++) {
-            td = tr[i].getElementsByTagName("td")[1];
-            if (td) {
-                var txtValue = td.textContent || td.innerText;
-                if (txtValue.toUpperCase().indexOf(filter) > -1) {
+            td = tr[i].getElementsByTagName("td")[2]; // Display Name column
+            td2 = tr[i].getElementsByTagName("td")[3]; // CSP Display Name column
+            if (td || td2) {
+                var txtValue1 = td ? td.textContent || td.innerText : "";
+                var txtValue2 = td2 ? td2.textContent || td2.innerText : "";
+                if (
+                    txtValue1.toUpperCase().indexOf(filter) > -1 ||
+                    txtValue2.toUpperCase().indexOf(filter) > -1
+                ) {
                     tr[i].style.display = "";
                 } else {
                     tr[i].style.display = "none";
@@ -130,6 +138,7 @@
             }
         }
     }
+
 
     function clearSearchInput() {
         document.getElementById("searchInput").value = "";
@@ -143,7 +152,7 @@
             var rows = table.rows;
             for (var i = 1; i < rows.length; i++) {
                 var cells = rows[i].cells;
-                var status = cells[2].innerText;
+                var status = cells[3].innerText;
                 if (statusFilter === "All" || status === statusFilter) {
                     rows[i].style.display = "";
                 } else {
@@ -173,6 +182,7 @@
         <th class="column-index">#</th>
         <th class="column-region-name">Region Name</th>
         <th class="column-display-name">Display Name</th>
+        <th class="column-csp-display-name">CSP Display Name</th>
         <th class="column-zone-list">Zone List</th>
     </tr>
     {{range $index, $region := .RegionInfo}}
@@ -180,17 +190,20 @@
         <td class="column-index">{{inc $index}}</td>
         <td class="column-region-name">{{$region.RegionName}}</td>
         <td class="column-display-name">{{$region.DisplayName}}</td>
+        <td class="column-csp-display-name">{{$region.CSPDisplayName}}</td> 
         <td class="column-zone-list">
             <table id="{{.InnerTableID}}" style="width: 100%;">
                 <tr>
                     <th class="inner-th">Zone Name</th>
                     <th class="inner-th">Display Name</th>
+                    <th class="inner-th">CSP Display Name</th>
                     <th class="inner-th">Zone Status</th>
                 </tr>
                 {{range .ZoneInfo}}
                 <tr>
                     <td>{{.ZoneName}}</td>
                     <td>{{.DisplayName}}</td>
+                    <td>{{.CSPDisplayName}}</td>
                     <td>{{.ZoneStatus}}</td>
                 </tr>
                 {{end}}
