AdminWeb: Enhancement a Zone Info for Disk and Subnet

--- a/api-runtime/rest-runtime/admin-web/html/disk.html
+++ b/api-runtime/rest-runtime/admin-web/html/disk.html
@@ -928,7 +928,7 @@
                 data.ZoneList.forEach(zone => {
                     const option = document.createElement('option');
                     option.value = zone.Name;
-                    option.textContent = `${zone.DisplayName} (${zone.Status})`;
+                    option.textContent = `${zone.Name} (${zone.DisplayName})`;
 
                     if (zone.Name === defaultZone) {
                         option.selected = true;
