--- a/api-runtime/rest-runtime/admin-web/html/vm-spec.html
+++ b/api-runtime/rest-runtime/admin-web/html/vm-spec.html
@@ -25,31 +25,32 @@
         font-size: 14px;
         text-align: center;
     }
-    .th-column-Misc {
-        width: 25%;
-        text-align: center;
-    }    
+
     .column-num {
         width: 5%;
         text-align: center;
     }
     .column-vmspecname {
-        width: 25%;
-        text-align: center;
-    }
-    .column-vcpuinfo {
-        width: 25%;
-        text-align: left;
-        padding-left: 0.5cm; /* Left padding to create a 0.5cm gap */
-    }
-    .column-meminfo {
         width: 20%;
         text-align: center;
     }
-    .column-gpuinfo {
-        width: 25%;
+    .column-vcpuinfo {
+        width: 10%;
         text-align: left;
-        padding-left: 0.5cm; /* Left padding to create a 0.5cm gap */
+        padding-left: 0.2cm; /* Left padding to create a 0.5cm gap */
+    }
+    .column-meminfo {
+        width: 10%;
+        text-align: center;
+    }
+    .column-diskinfo {
+        width: 10%;
+        text-align: center;
+    }
+    .column-gpuinfo {
+        width: 20%;
+        text-align: left;
+        padding-left: 0.2cm; /* Left padding to create a 0.5cm gap */
     }
     .column-Misc {
         width: 25%;
@@ -144,7 +145,8 @@
         <th class="column-num">#</th>
         <th class="column-vmspecname">VMSpec Name</th>
         <th>VCPU</th>
-        <th class="column-meminfo">Memory</th>
+        <th class="column-meminfo">Memory (MB)</th>
+        <th class="column-diskinfo">Disk (GB)</th>
         <th>GPU</th>
         <th class="th-column-Misc">Misc</th>
     </tr>
@@ -156,7 +158,8 @@
             &nbsp;* Count: {{$spec.VCpu.Count}}<br>
             &nbsp;* Clock: {{$spec.VCpu.Clock}} GHz<br>
         </td>
-        <td class="column-meminfo">{{$spec.Mem}} MB</td>
+        <td class="column-meminfo">{{$spec.Mem}}</td>
+        <td class="column-diskinfo">{{$spec.Disk}}</td>
         <td class="column-gpuinfo">
             {{range $gpu := $spec.Gpu}}
                 &nbsp;* Mfr: {{$gpu.Mfr}}<br>
